--- a/islt_7310/undergraduate_research.html
+++ b/islt_7310/undergraduate_research.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 28, 2022
 
-Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -45,7 +45,7 @@ Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflections</a><li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         </nav>
@@ -68,20 +68,20 @@ Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
         <h4>Research</h4>
         <ul>
             <li>Conducted literary reviews of previously conducted sleep studies to deepen my understanding of PSG, 
-                deep learning techniques, and neural networks.</li><br>
+                deep learning techniques, and neural networks.</li>
             <li>Developed a keen understanding of laboratory methods, which included literary review, documentation, 
-                research documentation, IRB training.</li><br>
+                research documentation, IRB training.</li>
             <li>Attended presentations to learn more about undergraduate research and 
                 the academic environment. Submitted an abstract to 2021 IEEE BIBM Virtual Conference: 
-                Sleep Stage Classification Using Non-Invasive Bed Sensing and Deep Learning.</li><br>
+                Sleep Stage Classification Using Non-Invasive Bed Sensing and Deep Learning.</li>
         </ul>
         <h4>Experiments</h4>
         <ul>
-            <li>Compiled data gathered from hydraulic bed sensors using Jupyter Notebook and Python programming.</li><br>
+            <li>Compiled data gathered from hydraulic bed sensors using Jupyter Notebook and Python programming.</li>
             <li>Used a Convolutional Neural Network (CNN)- Long-Short Term Memory (LSTM) hybrid model with 2 CNNs of different filter sizes for feature extraction. 
-                These features are then fed into the LSTM for classification.</li><br>
+                These features are then fed into the LSTM for classification.</li>
             <li>Then we compared our findings to the gold standard for sleep monitoring: Polysomnography (PSG). 
-                PSG is a comprehensive study of biological data gathered from test subjects using various sensors.</li><br>
+                PSG is a comprehensive study of biological data gathered from test subjects using various sensors.</li>
         </ul></div>
         <h4>Advisors: Dr. Marjorie Skubic<br>
         Graduate Student Mentors: Ruhan Yi<br>
