--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 24, 2022
 
-Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -45,7 +45,7 @@ Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflections</a><li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         </nav>
