--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 16, 2022
 
-Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -43,7 +43,7 @@ Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
                 </ul>
             </li>
             <li class="active"><a href="reflection.html">Reflections</a><li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
     </nav>
