--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -57,9 +57,9 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
         </header>
 
         <main>
-            <form method="post" action="mailto:hhthk7@umsystem.edu?Subject=Portfolio/Professional%20Website%20Contact">
+            <form method="post" action="mailto:hhthk7@umsystem.edu?Subject=Portfolio/Professional%20Website%20Contact" enctype="text/plain">
                 <label for="fname">First Name</label><br>
-                <input type="text" id="fname" name="lname" placeholder="Enter your first name." required><br>
+                <input type="text" id="fname" name="fname" placeholder="Enter your first name." required><br>
                 <label for="lname">Last Name</label><br>
                 <input type="text" id="lname" name="lname" placeholder="Enter your last name." required><br>
                 <label for="email">Email</label><br>
