--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -75,7 +75,39 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
             to go out of her comfort zone and experience the technology industry firsthand. If there is one trait I can boast it's my
             desire to satisfy my curiosity by learning new things.
         </p>
-    </main>
+    <table>
+        <caption>My experiences in the work force.</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Job Title</th>
+                    <th scope="col">Employer</th>
+                    <th scope="col">Date of Event</th>
+                </tr>
+            </thead>
+        <tbody>
+                <tr>
+                    <td>Library Assistant</td>
+                    <td>University of Missouri</td>
+                    <td>08/2021-Present</td>
+                </tr>
+                <tr>
+                    <td>Undergraduate Reserach Student</td>
+                    <td>University of Missouri</td>
+                    <td>05/2021-07/2021</td>
+                </tr>
+                <tr>
+                    <td>IT Support Specialist Assistant</td>
+                    <td>Lincoln University</td>
+                    <td>07/2019-08/2019</td>
+                </tr>
+                <tr>
+                    <td>Hydrology Laboratory Assistant</td>
+                    <td>Lincoln University</td>
+                    <td>07/2017-08/2017</td>
+                </tr>
+        </tbody>
+    </table>
+</main>
     <footer>
         Author: Hosanna Tesfaye<br>
         If you have any further questions, feel free to reach out! <br>
