--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -91,7 +91,7 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
                     <td>08/2021-Present</td>
                 </tr>
                 <tr>
-                    <td>Undergraduate Reserach Student</td>
+                    <td>Undergraduate Research Student</td>
                     <td>University of Missouri</td>
                     <td>05/2021-07/2021</td>
                 </tr>
