--- a/islt_7310/school_project.html
+++ b/islt_7310/school_project.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 28, 2022
 
-Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 8, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -66,6 +66,11 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
             A mini-music video (w/o audio) of the chorus for the song "I Lived" by OneRepublic.<br>
             A mini-film in which I alter the visual depth to blur the background to focus on the character entering the screen.
         </p>
+        <h4>Learning Objectives of my Digital Design Projects</h4>
+        <p>Advanced 2D and 3D animation, motion tracking for compositing, visual effects 
+            design and compositing concepts and practices are applied in these projects. 
+            They have helped me advance first hand experience with 2D and 3D animation, 
+            kinetic typography, and compositing practices in motion media design.</p>
         <iframe src="F21-3DText.mp4"></iframe>
         <iframe src="3DBioHazard.mp4"></iframe><br>
         <iframe src="S21Music.mp4"></iframe>
@@ -76,9 +81,9 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
             edit photos to create new visual images, and create digital art! Below I haave attached links to digital 
             art I have made such as a quilt pattern and a movie poster for a documentary based on the true events of the 2011
             Joplin Tornado. <br>
-            <a href="S21Quilt.jpg" target="_blank">Click this link</a> to see the quilt design!<br>
+            <img src="S21Quilt.jpg">
         
-        <a href="F21-MoviePoster.png" target="_blank">Click this link</a> to see the movie poster design!
+        <img src="F21-MoviePoster.png">
         </p>
 
         <p><a href="project.html">Back to Projects Page</a></p>
