--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: May 4, 2022
 
-Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -41,7 +41,8 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
                 <li><a href="project.html">Projects</a>
                     <ul>
                         <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
-                        <li><a href="school_project.html">School Projects</a></li>
+                        <li><a href="school_project.html">Adobe AE</a></li>
+                        <li><a href="photoshop_project.html">Adobe Photoshop</a></li>
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflections</a><li>
