--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 11, 2022
 
-Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -39,7 +39,8 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
             <li class="active"><a href="project.html">Projects</a>
                 <ul>
                     <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
-                    <li><a href="school_project.html">School Projects</a></li>
+                    <li><a href="school_project.html">Adobe AE</a></li>
+                    <li><a href="photoshop_project.html">Adobe Photoshop</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflections</a><li>
@@ -54,8 +55,9 @@ Modified/Tested:  May 4, 2022; Passed on Safari and Chrome browsers.
     </header>
 
     <main>
-        <h4>Click the Adobe photo below if you wish to see my creations using Adobe Software!</h4>
-        <a href="school_project.html"><img src="F21Adobe.png" alt="Adobe"></a>
+        <h4>Click the Adobe photos below if you wish to see my creations using Adobe Software!</h4>
+        <a href="school_project.html"><img src="Hhthk7-Projects-AE.png" alt="Adobe AE"></a>
+        <a href="photoshop_project.html"><img src="Hhthk7-Projects-PS.jpg" alt="Adobe Ps"></a>
 
         <h4>Click the photo below to learn more about my Undergraduate Research expreiences!</h4>
         <a href="undergraduate_research.html"><img src="2021REU.gif" alt="2021REU"></a>
