--- a/islt_7310/photoshop_project.html
+++ b/islt_7310/photoshop_project.html
@@ -70,8 +70,9 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
             edit photos to create new visual images, and create digital art! Below I haave attached links to digital 
             art I have made such as a quilt pattern and a movie poster for a documentary based on the true events of the 2011
             Joplin Tornado. <br>
+            <div class="PS_project"></div>
             <img src="S21Quilt.jpg">
-        <div class="PS_project">
+        
         <img src="F21-MoviePoster.png"></div>
         </p>
 
