--- a/islt_7310/photoshop_project.html
+++ b/islt_7310/photoshop_project.html
@@ -73,7 +73,7 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
             <div class="PS_project"></div>
             <img src="S21Quilt.jpg">
         
-        <img src="F21-MoviePoster.png"></div>
+            <img src="F21-MoviePoster.png">
         </p>
 
         <p><a href="project.html">Back to Projects Page</a></p>
