--- a/islt_7310/photoshop_project.html
+++ b/islt_7310/photoshop_project.html
@@ -71,9 +71,9 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
             art I have made such as a quilt pattern and a movie poster for a documentary based on the true events of the 2011
             Joplin Tornado. <br>
             <div class="PS_project"></div>
-            <img src="S21Quilt.jpg">
+            <img src="S21Quilt.jpg" alt="Quilt Pattern">
         
-            <img src="F21-MoviePoster.png">
+            <img src="F21-MoviePoster.png" alt="Joplin Poster">
         </p>
 
         <p><a href="project.html">Back to Projects Page</a></p>
