--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -59,7 +59,7 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
         <a href="school_project.html"><img src="Hhthk7-Projects-AE.png" alt="Adobe AE"></a>
         <a href="photoshop_project.html"><img src="Hhthk7-Projects-PS.jpg" alt="Adobe Ps"></a>
 
-        <h4>Click the photo below to learn more about my Undergraduate Research expreiences!</h4>
+        <h4>Click the photo below to learn more about my Undergraduate Research experiences!</h4>
         <a href="undergraduate_research.html"><img src="2021REU.gif" alt="2021REU"></a>
     </main>
     <footer>
