--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -17,6 +17,28 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
+        <script>
+            var counterContainer = document.querySelector(".website-counter");
+            var resetButton = document.querySelector("#reset");
+            var visitCount = localStorage.getItem("page_view");
+
+// Check if page_view entry is present
+        if (visitCount) {
+            visitCount = Number(visitCount) + 1;
+            localStorage.setItem("page_view", visitCount);
+        } else {
+            visitCount = 1;
+            localStorage.setItem("page_view", 1);
+            }
+            counterContainer.innerHTML = visitCount;
+
+// Adding onClick event listener
+            resetButton.addEventListener("click", () => {
+            visitCount = 1;
+            localStorage.setItem("page_view", 1);
+            counterContainer.innerHTML = visitCount;
+            });
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -64,7 +86,15 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
             with you who may be reading this site, and hopefully demonstrate to those who are interested why I may be a 
             capable worker in your workspace/company.
         </p>
+        
     </main>
+    <!-- Javascript Feature: A visitor counter that should increment every time the page is refreshed, and resets the number 
+    of visitors with teh reset button
+    Source of inspiration: https://contactmentor.com/build-website-visitor-counter-javascript/-->
+<div>Website visit count:</div>
+    <div class="website-counter"></div>
+    <button id="reset">Reset</button>
+
 
     <footer>
         Author: Hosanna Tesfaye<br>
@@ -74,3 +104,4 @@ Modified/Tested:  May 13, 2022; Passed on Safari and Chrome browsers.
         &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
     </footer>
     </body>
+</html>
